# q-hackathon

./: .gitignore  Cargo.toml  README.md  run.sh
examples/data_structures/: README.md
examples/data_structures/src/: binary_tree.rs  prefix_tree.rs  stack.rs
examples/math/: .gitignore  README.md
lua/q/: file_picker.lua  init.lua  log.lua
src/: chat.rs  code.rs  hello.rs  main.rs  system_prompts.rs
