[package]
name = "hackathon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
aws-config = "1.5.11"
aws-sdk-bedrockruntime = "1.65.0"
aws-smithy-runtime-api = "1.7.3"
aws-smithy-types = "1.2.10"
clap = { version = "4.5.23", features = ["derive"] }
serde = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
